<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ForgotPasswordFragment">

    <data>
        <variable
            name="submit"
            type="com.kodecamp.learnkotlin.fragments.ForgotPasswordFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_24sdp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_your_password"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:textSize="@dimen/_20ssp"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_description"
                android:layout_marginTop="@dimen/_10sdp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enterEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email"
                android:layout_marginTop="@dimen/_20sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitBtn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/submit_btn"
                android:textAllCaps="false"
                android:background="@drawable/btn_bg"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:onClick="@{() -> submit.backToSignInScreen()}"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/backToSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/back_to_sign_in"
                android:textColor="@color/black"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:onClick="@{() -> submit.backToSignInScreen()}"/>
        </LinearLayout>

    </ScrollView>

</layout>
