<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.SignInFragment">

    <data>
        <variable
            name="signIn"
            type="com.kodecamp.learnkotlin.fragments.SignInFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_24sdp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/kotlin_img"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:textSize="@dimen/_20ssp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enterEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email"
                android:layout_marginTop="@dimen/_20sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enterPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_password"
                android:layout_marginTop="@dimen/_20sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:layout_marginTop="@dimen/_15sdp"
                android:onClick="@{() -> signIn.goToForgotPasswordScreen()}"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInBtn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_btn"
                android:textAllCaps="false"
                android:background="@drawable/btn_bg"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:onClick="@{() -> signIn.goToDashboard()}"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/createNewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/create_new_account"
                android:textColor="@color/black"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:onClick="@{() -> signIn.goToSignUpScreen()}"/>
        </LinearLayout>

    </ScrollView>

</layout>